# kubernetes-cleaner-rs

./: Cargo.toml  README.md
example/: cleaner.yaml
src/: main.rs
