[package]
name = "cleaner-rs"
version = "0.1.0"
edition = "2021"
authors = ["Peter Kracik <peter@kracik.sk>"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_26"]

[dependencies]
kube = { version = "0.80.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
either = "1.6.1"
schemars = "0.8.6"
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
validator = { version = "0.16.0", features = ["derive"] }
futures = "0.3.17"
